--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.verygoodsecurity:vgscheckout:1.3.2"
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
